--- a/vista/registro.html
+++ b/vista/registro.html
@@ -18,7 +18,7 @@
             <div class="container__nav">
                 <nav id="nav">
                     <ul>
-                        <li><a href="index.php" class="select">Inicio</a></li>
+                        <li><a href="index" class="select">Inicio</a></li>
                         <li><a href="#">Acceso</a></li>
                         <li><a href="#">Sobre Nosotros</a></li>
                         <li><a href="#">Ayuda</a></li>
