cambios de extension de php a html

--- a/vista/index.html
+++ b/vista/index.html
@@ -19,7 +19,7 @@
                 <nav id="nav">
                     <ul>
                         <li><a href="#" class="select">Inicio</a></li>
-                        <li><a href="login">Acceso</a></li>
+                        <li><a href="login.html">Acceso</a></li>
                         <li><a href="#">Sobre Nosotros</a></li>
                         <li><a href="#">Ayuda</a></li>
                     </ul>
