--- a/vista/login.html
+++ b/vista/login.html
@@ -18,7 +18,7 @@
             <div class="container__nav">
                 <nav id="nav">
                     <ul>
-                        <li><a href="index" class="select">Inicio</a></li>
+                        <li><a href="index.html" class="select">Inicio</a></li>
                         <li><a href="#">Acceso</a></li>
                         <li><a href="#">Sobre Nosotros</a></li>
                         <li><a href="#">Ayuda</a></li>
@@ -39,7 +39,7 @@
                     <input type="password" name="pass" id="pass" placeholder="Contraseña">
                     <p>Olvido su Contraseña <a href="#">Da Click aqui</a></p>
                     <input type="button" value="Iniciar Sesion">
-                    <p>No tiene Cuenta <a href="registro.php">Registrese!</a></p>
+                    <p>No tiene Cuenta <a href="registro.html">Registrese!</a></p>
                 </div>
                 <div class="container_img">
                         <img src="../img/Content creation_Monochromatic.svg" alt="">
