--- a/vista/registro.html
+++ b/vista/registro.html
@@ -18,7 +18,7 @@
             <div class="container__nav">
                 <nav id="nav">
                     <ul>
-                        <li><a href="index" class="select">Inicio</a></li>
+                        <li><a href="index.html" class="select">Inicio</a></li>
                         <li><a href="#">Acceso</a></li>
                         <li><a href="#">Sobre Nosotros</a></li>
                         <li><a href="#">Ayuda</a></li>
@@ -41,7 +41,7 @@
                     <input type="password" name="pass" id="pass" placeholder="Contraseña">
                     <input type="password" name="pass" id="pass" placeholder="Confimar contraseña">
                     <input type="button" value="Registrese">
-                    <p>Ya tiene cuenta? <a href="login.php">Inicie Sesion</a></p>
+                    <p>Ya tiene cuenta? <a href="login.html">Inicie Sesion</a></p>
                 </div>
                 <div class="container_img">
                         <img src="../img/Content creation_Monochromatic.svg" alt="">
