--- a/vista/index.html
+++ b/vista/index.html
@@ -18,7 +18,7 @@
             <div class="container__nav">
                 <nav id="nav">
                     <ul>
-                        <li><a href="#" class="select">Inicio</a></li>
+                        <li><a href="index.html" class="select">Inicio</a></li>
                         <li><a href="login.html">Acceso</a></li>
                         <li><a href="#">Sobre Nosotros</a></li>
                         <li><a href="#">Ayuda</a></li>
