--- a/vista/sobre.html
+++ b/vista/sobre.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/333b9b8f44.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../configuracion/css/estilos_sobre.css">
     <link rel="stylesheet" href="../configuracion/css/estilos.css">
-    <title>SUS Bank</title>
+    <title>Sobre Nosotros</title>
 </head>
 <body>
     <!-- Barra de navegacion -->
@@ -29,79 +30,64 @@
         </div>
     </header>
     <!-- Fin Barra de navegacion -->
-    <!-- Portada -->
-    <div class="container__all" id="container_all">
+     <!-- Portada -->
+     <div class="container__all" id="container_all">
         <div class="cover">
             <div class="container__cover">
                 <div class="container__info">
-                    <h1>SUS</h1>
-                    <H2>Bank</H2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, nam fuga delectus 
-                    laudantium tenetur eligendi magnam neque ullam? Id laborum, in dolore debitis nisi delectus 
-                    ipsum voluptate quae est libero?</p>
+                    <h1>Sobre</h1>
+                    <H2>Nosotros</H2>
+                    <p>La seguridad de tu dinero siempre será lo mas importante para nosotros. 
+                        Por eso  nuestro equipo de desarrolladores trabajó duro para cumplir sus espectativas.</p>
                     <input type="button" value="Get Started">
                 </div>
                 <div class="container__vector">
-                    <img src="../img/Wallet_Monochromatic.svg" alt="portada" type="img/svg">
+                    <img src="../img/Finance analytics _Monochromatic.svg" alt="portada" type="img/svg">
                 </div>
             </div>
         </div>
     <!-- Fin Portada -->
-    <!-- Box de cards -->
+       
     <main>
-        <h1>Contratación digital</h1>
-        <div class="container__box">
-            <div class="box">
-                <i class="fa-solid fa-shop"></i>
-                <h5>Crédito de negocios</h5>
-                <h4>Crédito de negocios</h4>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-address-card"></i>
-                <h5>Cuenta</h5>
-                <h4>Cuenta</h4>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-wallet"></i>
-                <h5>Tarjeta de Credito</h5>
-                <h4>Tarjeta de Credito</h4>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-chart-pie"></i>
-                <h5>Prestamos</h5>
-                <h4>Prestamos</h4>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-chart-line"></i>
-                <h5>Inversiones</h5>
-                <h4>Inversiones</h4>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-stethoscope"></i>
-                <h5>Seguro de Vida</h5>
-                <h4>Seguro de Vida</h4>
-            </div>
-        </div><br>
-        <!-- Fin Box de cards -->
-        <!-- Banner -->
-        <div class="container__banner">
-            <div class="banner">
-                <div class="icon">
-                    <img src="../img/8712738_lock_iso_premium_icon.png"  id="icon" alt="">
+         <!-- cards -->
+        <div class="body__page">
+
+            <div class="container__card">
+
+                <div class="card c1">
+                    <div class="icon">
+                        <i class="fa-solid fa-list-check"></i>
+                    </div>
+                    <div class="info__description">
+                        <p>Alentar a las personas a manejar su vida de finanzas de una forma rápida y segura atreves el mundo digital.</p>
+                    </div>
                 </div>
-                <div class="img__icon_dollar">
-                    <img src="../img/8712511_dollar_money_currency_coin_payment_icon.png" id="icon_dollar" alt="">
+
+                <div class="card c2">
+                    <div class="icon">
+                        <i class="fa-solid fa-people-group"></i>
+                    </div>
+                    <div class="info__description">
+                        <p>Los integrantes somos:</p>
+                        <p>Luis Adrian Gamez Ramos</p>
+                        <p>Eduardo Alberto Camargo Rodriguez</p>
+                        <p>José Miguel Hernández Rayón</p>
+                        <p>Sebastian Lopez Avila</p>
+                    </div>
                 </div>
-                <div class="text">
-                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident eaque et id veritatis aliquam nesciunt quasi..</h2>
-                    <input type="button" value="Leer más">
+
+                <div class="card c3">
+                    <div class="icon">
+                        <i class="fa-solid fa-bullseye"></i>
+                    </div>
+                    <div class="info__description">
+                        <p>Ser una compañía reconocida por ofrecer la mejor  y más memorable de las experiencias en servicios financieros de forma digital.</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Fin Banner -->
+        <!-- cards -->
     </main>
-    
-
 
     <!-- Pie de Pagina -->
     <footer>
@@ -143,7 +129,6 @@
         </div>
     </footer>
     <!-- Fin Pie de Pagina -->
-    </div>
-   <script src="../configuracion/js/app.js"></script>
+    <script src="../configuracion/js/app_sobre.js"></script>
 </body>
 </html>
