--- a/vista/index.html
+++ b/vista/index.html
@@ -94,7 +94,7 @@
                     <img src="../img/8712511_dollar_money_currency_coin_payment_icon.png" id="icon_dollar" alt="">
                 </div>
                 <div class="text">
-                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident eaque et id veritatis aliquam nesciunt quasi..</h2>
+                    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident eaque et id verigatis aliquam nesciunt quasi..</h2>
                     <input type="button" value="Leer más">
                 </div>
             </div>
