--- a/vista/home.html
+++ b/vista/home.html
@@ -34,6 +34,8 @@
     <div class="container_all">
         <main style="margin-top: 140px;">
             <h2>Bienvenido Usuario</h2>
+            <button><li><a href="#">Transferir</a></li></button>
+            <button><li><a href="#">Pagar Servicios</a></li></button>
                 <section class="tables">
                     <div class="table1">
                         <table class="tb_saldo">
