--- a/vista/home.html
+++ b/vista/home.html
@@ -36,7 +36,7 @@
             <h2>Bienvenido Usuario</h2>
             <button><li><a href="#">Transferir</a></li></button>
             <button><li><a href="#">Pagar Servicios</a></li></button>
-                <section class="tables">
+                <div class="tables">
                     <div class="table1">
                         <table class="tb_saldo">
                             <thead>
@@ -73,7 +73,7 @@
                             </tbody>
                         </table>
                     </div>
-                </section>
+                </div>
         </main>
     </div>
     <script src="../configuracion/js/app_home.js"></script>
