--- a/vista/home.html
+++ b/vista/home.html
@@ -20,8 +20,8 @@
             <div class="container__nav">
                 <nav id="nav">
                     <ul>
-                        <li><a href="#">Transferir</a></li>
-                        <li><a href="#">Mi Perfil</a></li>
+                        <li><a href="transferencia.html">Transferir</a></li>
+                        <li><a href="perfil.html">Mi Perfil</a></li>
                         <li><a href="ayuda.html">Ayuda</a></li>
                         <li><a href="index.html" class="select">Cerrar</a></li>
                     </ul>
@@ -34,8 +34,7 @@
     <div class="container_all">
         <main style="margin-top: 140px;">
             <h2>Bienvenido Usuario</h2>
-            <button><li><a href="#">Transferir</a></li></button>
-            <button><li><a href="#">Pagar Servicios</a></li></button>
+            <button><li><a href="transferencia.html">Transferir y pago de servicios</a></li></button>
                 <div class="tables">
                     <div class="table1">
                         <table class="tb_saldo">
