--- a/vista/login.html
+++ b/vista/login.html
@@ -35,8 +35,9 @@
               </div>
               <div class="input-field">
                 <i class="fa-solid fa-address-card"></i>
-                <input type="text" placeholder="INE" />
+                <input type="text" placeholder="CURP" />
               </div>
+              <li style="list-style: none;"><a style="  color: #373737; font-size: 15px; text-decoration: none;" href="https://www.gob.mx/curp/">Click para consultar tu CURP</a></li>
               <div class="input-field">
                 <i class="fas fa-envelope"></i>
                 <input type="email" placeholder="Correo" />
