--- a/vista/transferencia.html
+++ b/vista/transferencia.html
@@ -46,6 +46,11 @@
                 </datalist>
               </div>
               <div class="input-field">
+                <i class="fa-solid fa-receipt"></i>
+                <input type="text" placeholder="referencia" />
+              </div>
+              
+              <div class="input-field">
                 <i class="fa-brands fa-bitcoin"></i>
                 <input type="text" placeholder="Cantidad" />
               </div>
