--- a/vista/transferencia.html
+++ b/vista/transferencia.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/333b9b8f44.js" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="shortcut icon" type="image/x-icon" href="../img/logo.png">
     <link rel="stylesheet" href="../configuracion/css/estilos.css">
     <link rel="stylesheet" href="../configuracion/css/estilos_pagos.css">
@@ -46,11 +47,16 @@
                 </datalist>
               </div>
               <div class="input-field">
+                <i class="fa-solid fa-receipt"></i>
+                <input type="text" placeholder="referencia"/>
+              </div>
+              <li style="list-style: none;"><a style="color: #373737; font-size: 15px; text-decoration: none; cursor: pointer;" onclick="referencia()">Que es la referencia?</a></li>
+              <div class="input-field">
                 <i class="fa-brands fa-bitcoin"></i>
                 <input type="text" placeholder="Cantidad" />
               </div>
               <input type="submit" value="Pagar" class="btn solid" />
-              <input type="submit" value="Cancelar" class="btn solid" />
+              <input type="reset" value="Cancelar" class="btn solid" />
             </form>
           </div>
         </div>
